--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="autoApp">
   <head>
     <title><%=typeof title == 'undefined' ? 'New Sails App' : title%></title>
+    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -34,7 +35,7 @@
   </head>
 
   <body>
-    <%- body %>
+    <div ng-view></div>
 
 
 
@@ -60,7 +61,7 @@
     -->
 
     <!--TEMPLATES-->
-    
+    <script type="text/javascript" src="/jst.js"></script>
     <!--TEMPLATES END-->
 
 
@@ -89,6 +90,12 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/jquery.js"></script>
+    <script src="/js/dependencies/angular.js"></script>
+    <script src="/js/dependencies/angular-route.js"></script>
+    <script src="/js/app.js"></script>
+    <script src="/js/controllers/DriverCtrl.js"></script>
+    <script src="/js/service/Factory.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
