--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -93,7 +93,10 @@
     <script src="/js/dependencies/jquery.js"></script>
     <script src="/js/dependencies/angular.js"></script>
     <script src="/js/dependencies/angular-route.js"></script>
+    <script src="/js/dependencies/moment.min.js"></script>
     <script src="/js/app.js"></script>
+    <script src="/js/controllers/CustomerCtrl.js"></script>
+    <script src="/js/controllers/DashboardCtrl.js"></script>
     <script src="/js/controllers/DriverCtrl.js"></script>
     <script src="/js/service/Factory.js"></script>
     <!--SCRIPTS END-->
