--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -94,6 +94,7 @@
     <script src="/js/dependencies/angular.js"></script>
     <script src="/js/dependencies/angular-route.js"></script>
     <script src="/js/dependencies/moment.min.js"></script>
+    <script src="/js/dependencies/angular-sails.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/controllers/CustomerCtrl.js"></script>
     <script src="/js/controllers/DashboardCtrl.js"></script>
